--- a/css.css
+++ b/css.css
@@ -14,7 +14,8 @@ nav ul {
 nav li {
     position: relative;
     list-style: none;
-    display: inline-block;
+    display: flex;
+    justify-content: space-evenly;
     width: 25%;
     height: 100%;
     float: left;
