--- a/SRC/css.css
+++ b/SRC/css.css
@@ -131,8 +131,8 @@ nav li ul li a {
 .milieu {
     background-color: rgb(43, 51, 78);
     background-size: cover;
-    width: 1000px;
-    height: 1300px;
+    width: 60%;
+    height: 100%;
     text-align: center;
     margin: auto;
     margin-top: 100px;
@@ -140,48 +140,43 @@ nav li ul li a {
     padding: 50px;
     border-radius: 10%;
     color: rgb(156, 131, 131);
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: larger;
-    
 }
 
-.back{
-
-    margin:0;
-  padding:0;
-  background: url(../image/homon.png) no-repeat center fixed; 
-  -webkit-background-size: cover; /* pour anciens Chrome et Safari */
-  background-size: cover; /* version standardisée */
-
-
+.back {
+    margin: 0;
+    padding: 0;
+    background: url(../image/homon.png) no-repeat center fixed;
+    -webkit-background-size: cover;
+    /* pour anciens Chrome et Safari */
+    background-size: cover;
+    /* version standardisée */
 }
 
 .button {
-	padding:15px 0 15px 0;
-	font:bold 16px Arial;
-	background:#f5f5f5;
-	color:#555;
-	border-radius:2px;
-	width:100px;
-	border:1px solid #ccc;
+    padding: 15px 0 15px 0;
+    font: bold 16px Arial;
+    background: #f5f5f5;
+    color: #555;
+    border-radius: 2px;
+    width: 100px;
+    border: 1px solid #ccc;
 }
 
-.buton{
-
+.buton {
     padding: 5px;
-    
-	background:#2a2a41;
-	color:rgb(255, 254, 249);
-	border-radius:2px;
-	width:15%;
-	border:2px solid #ccc;
-
+    background: #2a2a41;
+    color: rgb(255, 254, 249);
+    border-radius: 2px;
+    width: 15%;
+    border: 2px solid #ccc;
 }
 
-.buton:hover{
-
+.buton:hover {
     cursor: pointer;
-    color: rgb(129, 129, 144);;
+    color: rgb(129, 129, 144);
+    ;
 }
 
 .ingenieur1 img {
@@ -195,6 +190,7 @@ nav li ul li a {
     -webkit-transform: scale(1.3);
     transform: scale(1.3);
 }
+
 
 /*===== MENU =====*/
 
