--- a/SRC/css.css
+++ b/SRC/css.css
@@ -145,6 +145,28 @@ nav li ul li a {
     text-align: center;
 }
 
+.mainbox {
+    background-color: rgb(43, 51, 78);
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    margin-top: 2%;
+    padding: 50px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: larger;
+}
+
+.nousflex {
+    display: inline-flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
+}
+
 .milieu {
     background-color: rgb(43, 51, 78);
     background-size: cover;
