--- a/SRC/css.css
+++ b/SRC/css.css
@@ -96,7 +96,7 @@ nav li ul li a {
     font-size: xx-large;
 }
 
-.efrei {
+.icone {
     max-width: 100%;
     max-height: 100%;
 }
@@ -116,13 +116,7 @@ nav li ul li a {
     font-size: 17pt;
 }
 
-.intitule {
-    font-size: 12pt;
-    color: lightgray;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.formation {
+.titrepartie {
     display: inline-flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -170,6 +164,24 @@ nav li ul li a {
 .runage {
     height: 800px;
     width: 1200px;
+}
+
+.cavaetretoutnoir {
+    background-color: rgb(12, 19, 32);
+}
+
+#soustitre {
+    display: inline-flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-left: 2%;
+}
+
+.soustitre1 {
+    margin: 15px;
+    height: 100px;
+    text-align: center;
 }
 
 .milieu {
@@ -223,14 +235,14 @@ nav li ul li a {
     ;
 }
 
-.ingenieur1 img {
+.soustitre1 img {
     -webkit-transform: scale(1);
     transform: scale(1);
     -webkit-transition: .3s ease-in-out;
     transition: .3s ease-in-out;
 }
 
-.ingenieur1:hover img {
+.soustitre1:hover img {
     -webkit-transform: scale(1.3);
     transform: scale(1.3);
 }
